# monit-agregator

./: .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.alpine  README.md  Settings.yaml  justfile  shell.nix
src/: conf.rs  http_server.rs  lib.rs  main.rs  monit_request.rs  status_generation.rs
