[package]
name = "monit-agregator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
#reqwest = { version = "0.11", features = ["json"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
futures = "0.3"
config = "0.13.1"
#serde = { version = "1.0", features = ["derive"] }
