[package]
name = "monit-agregator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
futures = "0.3"
config = "0.13.1"
serde = { version = "1.0.97", features = ["derive"] }
log = "0.4"
env_logger = "0.9.0"
clap = { version = "3.2", features = ["derive"] }
unicode-segmentation = "1.9.0"

[dev-dependencies]
#trycmd = "0.13.3"
mockito = "0.31"

[profile.release]
panic = 'abort'
