[package]
name = "monit-agregator"
version = "0.1.2"
edition = "2021"
description = "Watchdog Monit agregator, like M/Monit"
documentation = "https://codeberg.org/thasos/monit-agregator"
repository = "https://codeberg.org/thasos/monit-agregator"
keywords = ["monitoring"]
categories = ["web-programming"]
license-file = "LICENSE.txt"
readme = "README.md"
publish = true

[package.metadata.deb]
maintainer = "Thasos Kanan <thasos@thasmanie.fr>"
copyright = "2022, Thasos Kanan <thasos@thasmanie.fr>"
license-file = ["LICENSE.txt", "0"]
extended-description = "Watchdog Monit agregator, like M/Monit"
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/monit-agregator", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/monit-agregator/README", "644"],
]

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
futures = "0.3"
config = "0.13.1"
serde = { version = "1.0.97", features = ["derive"] }
log = "0.4"
env_logger = "0.9.0"
clap = { version = "3.2", features = ["derive"] }
unicode-segmentation = "1.9.0"

[dev-dependencies]
#trycmd = "0.13.3"
mockito = "0.31"

[profile.release]
panic = 'abort' # No unwinding on panic
strip = true  # Automatically strip symbols from the binary.
opt-level = "s"  # Optimize for size.
lto = true
codegen-units = 1

[target.x86_64-unknown-linux-musl.dependencies]
openssl-sys = { version = "0.9.76", features = ["vendored"] }
